<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/app_name"
                android:textColor="@color/textDarkPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/shoppingCartImg"
                style="?attr/actionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:clipToPadding="false"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_shopping_cart" />

                <TextView
                    android:id="@+id/cartBadge"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|top"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="-5dp"
                    android:background="@drawable/cart_notification_shape"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/zero"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />
            </FrameLayout>

            <!--            <ImageView-->
            <!--                android:id="@+id/searchImg"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginEnd="16dp"-->
            <!--                android:src="@drawable/ic_search"-->
            <!--                app:layout_constraintBottom_toBottomOf="@+id/textView"-->
            <!--                app:layout_constraintEnd_toStartOf="@+id/shoppingCartImg"-->
            <!--                app:layout_constraintTop_toTopOf="@+id/textView" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" >



            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:layoutDirection="locale" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                app:tabBackground="@drawable/tab_selector"
                app:tabIndicatorHeight="0dp"/>


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.cardview.widget.CardView
                android:id="@+id/coffeeCardView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"

                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/coffeeImg"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_coffee_mug"
                        app:layout_constraintBottom_toTopOf="@+id/coffeeTv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/coffeeTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/coffee"
                        android:textColor="@color/textDarkSecondary"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/teaCardView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/teaImg"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_tea_cup"
                        app:layout_constraintBottom_toTopOf="@+id/teaTv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/teaTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/tea"
                        android:textColor="@color/textDarkSecondary"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/creamCardView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/creamImg"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_ice_cream"
                        app:layout_constraintBottom_toTopOf="@+id/creamTv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/creamTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/cream"
                        android:textColor="@color/textDarkSecondary"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/freezeCardView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="false">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/freezeImg"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_frappe"
                        app:layout_constraintBottom_toTopOf="@+id/freezeTv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/freezeTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/freeze"
                        android:textColor="@color/textDarkSecondary"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:listitem="@layout/product_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
